# taskflow

./: .gitignore  LICENSE  README.md  docker-compose.yml  start.sh  stop.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  start.sh
backend/src/: main.py
backend/src/agents/: task_executor.py
backend/src/core/: config.py  logging.py
backend/src/routers/: status.py  tasks.py
backend/src/schemas/: __init__.py  step.py  task.py
backend/src/services/: task_service.py
backend/src/storage/: task_store.py
backend/tests/unit/: test_health.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  start.sh  tailwind.config.ts  vercel.json
frontend/src/api/: taskflow.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentReasoningLog.tsx  AgentStepTimeline.tsx  DemoModeToggle.tsx  Footer.tsx  Header.tsx  PromptBox.tsx  Sidebar.tsx  StatusBar.tsx  ThemeToggle.tsx  ToolStatusDashboard.tsx
frontend/src/hooks/: useStatusPoll.ts  useTaskflow.ts
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
